--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-next-on-pages": "^1.13.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
