--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-next-on-pages": "^1.13.2",
     "postcss": "^8",
     "prettier": "^3.3.3",
