--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-next-on-pages": "^1.13.2",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
