feat: ✨ #80 APIエンドポイントの作成
* feat: ✨ #80 APIのセットアップとエラーハンドリング

* chore: 🧹 tsconfig.jsonの修正

* fix: 🛠️ パスの修正

* fix: 🛠️  lgtm-data内のファイルを.jsxに変更

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/lgtm-data/*": ["./lgtm-data/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
