chore: 🧹 #58 Huskyとlint-staged

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    ".{ts, js, tsx, jsx}": "eslint --fix",
+    "*.{ts, js, tsx, jsx}": "eslint --fix",
     "**/*": "prettier --write --ignore-unknown"
   }
 }
