--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts, js, tsx, jsx}": "eslint --fix",
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
