feat: ✨ #164 maskable iconの追加

--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,7 +1,27 @@
 {
   "name": "LGTM Factory",
   "icons": [
-    { "src": "/icon-192x192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "/icon-512x512.png", "type": "image/png", "sizes": "512x512" }
+    {
+      "src": "/icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/icon-192x192-maskable.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "/icon-512x512-maskable.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
+    }
   ]
 }
