chore: 🧹#197 cloudflare用のESLintプラグインの削除

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,4 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:eslint-plugin-next-on-pages/recommended",
-    "prettier"
-  ],
-  "plugins": ["eslint-plugin-next-on-pages"]
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": []
 }
