--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
-  "plugins": []
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:eslint-plugin-next-on-pages/recommended",
+    "prettier"
+  ],
+  "plugins": ["eslint-plugin-next-on-pages"]
 }
